compiler/weave_syntax/tests/data/Tokens.error
error: Expected '[token:identifier]'
        --> <source>:33:1
         |
      33 | and_eq
         | ^^^^^^
error: Expected '[token:identifier]'
        --> <source>:34:1
         |
      34 | or
         | ^^
error: Expected '[token:identifier]'
        --> <source>:35:1
         |
      35 | or_eq
         | ^^^^^
error: Expected '[token:identifier]'
        --> <source>:36:1
         |
      36 | xor
         | ^^^
error: Unexpected tokens
        --> <source>:36:1
         |
      36 | xor
         | ^^^
      37 | xor_eq
         | ^^^^^^
      38 | not
         | ^^^
     ... |
     318 | r"raw string \t"
         | ^^^^^^^^^^^^^^^^
     319 | r#"raw string \n"#
         | ^^^^^^^^^^^^^^^^^^
     320 | r##" r#"inner\nraw\nstring"# "##
         | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
